add speach reconition
